# python-shell-source

./: README.md  pyproject.toml
.github/workflows/: automerge.yml  decs_and_format.yml  docs.yml  docs_and_format.yml  publish.yml  skip_tests.yml  tests.yml
conda-recipe/: meta.yaml
docs/shell_source/: index.html  shell_config.html  source.html
docs/shell_source/scripters/: csh_scripter.html  fish_scripter.html  index.html  scripter.html
shell_source/: __init__.py  shell_config.py  source.py
shell_source/scripters/: __init__.py  csh_scripter.py  fish_scripter.py  scripter.py
tests/: test_source.py
